add side navigation

--- a/index.html
+++ b/index.html
@@ -114,17 +114,16 @@
 
     </div> <!-- .main-landing-page -->
 
-    <div class="section about-me flex align-center">
-       <div class="wrapper-container flex align-center is-column justify-center">
-        <h1>Wellington based digital designer and front end developer</h1>
-        <ul class="skills space-between">
+    <div class="section about-me flex justify-center">
+       <div class="wrapper-container flex is-column justify-center">
+<!--     <ul class="skills space-between">
           <li class="skill-item">design</li>
           <li class="skill-item">prototyping</li>
           <li class="skill-item">UX/UI</li>
           <li class="skills-item">Interactive</li>
-        </ul> 
+        </ul> --> 
         <div class="about-footer-text">
-          <h4>click above to view my portfolio</h4>
+          <h2>click above to view my portfolio</h2>
         </div>
       </div>     
       </div>
