--- a/prototype.html
+++ b/prototype.html
@@ -79,38 +79,7 @@
 
     </div> <!-- .menu-container -->
   </nav> <!-- .fp-nav-wrapper -->
- 
-<!--     <nav class="fp-nav-wrapper flex is-row justify-start">
-      <div class="menu-container flex is-row">
-        <div class="nav-content is-half">
-          <ul class="menu-list-items">
-            <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
-            <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
-            <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-            <li data-menuanchor="user-interface"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="design and photography"><a href="./#photography">photography</a></li>
-            <li data-menuanchor="resume"><a href="resume.html">resume</a></li>
-          </ul>
-        </div>
 
-        <aside class="nav-content-text flex is-half justify-center">
-          <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
-        </aside>
-
-      <div class="social-main">
-        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-      </div>
-      <div class="nav-back-button">
-        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-      </div>
-
-      </div>
-    </nav> .fp-nav-wrapper
-
-  </div> .main-header & navigation -->
 
   <main class="prototype-main-wrapper">
 
@@ -129,10 +98,13 @@
         <div class="welcome-iphone">
           <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
         </div>
+        <div id="scroll-down-btn">
+          scroll down
+      </div>
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process align-center flex justify-center">
+    <section id="process" class="process align-center flex justify-center">
       <div class="process-container flex-container align-center">
         <article class="process-text">
           <h2>Process</h2>
