work on process section prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -98,16 +98,19 @@
         <div class="welcome-iphone">
           <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
         </div>
-        <div id="scroll-down-btn">
+<!--         <div id="scroll-down-btn">
           scroll down
-      </div>
+      </div> -->
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
     <section id="process" class="process align-center flex justify-center">
-      <div class="process-container flex-container align-center">
+      <div class="process-container flex-container align-center justify-center">
         <article class="process-text">
-          <h2>Process</h2>
+          <h1>WHAT'S THE PROCESS?</h1>
+          <h5>TOP TIER COMMUNITY REQUIRES TOP TIER PEOPLE.</h5>
+          <p class="intro-para">We expect everyone to participate, be committed and work hard. In return, we will open up our network to you and actively support you for 12 months.</p>
+          <p>You will get access to workshops, network, investors, advise, data science labs (AI/IoT etc), workshops, social events and – of course – office and meeting room facilities.</p>
           <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
         </article>
       </div>
