continue work on prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -107,11 +107,10 @@
     <section id="process" class="process align-center flex justify-center">
       <div class="process-container flex-container align-center justify-center">
         <article class="process-text">
-          <h1>WHAT'S THE PROCESS?</h1>
-          <h5>TOP TIER COMMUNITY REQUIRES TOP TIER PEOPLE.</h5>
+          <h1>What's the process?</h1>
           <p class="intro-para">We expect everyone to participate, be committed and work hard. In return, we will open up our network to you and actively support you for 12 months.</p>
           <p>You will get access to workshops, network, investors, advise, data science labs (AI/IoT etc), workshops, social events and – of course – office and meeting room facilities.</p>
-          <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
+          <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome.</p>
         </article>
       </div>
     </section> <!-- .process -->
@@ -119,8 +118,8 @@
     <section class="scope flex justify-center">
       <div class="scope-container flex-container is-column">
         <article class="scope-text">
-          <h2>Scoping</h2>
-          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+          <h1>Scoping</h1>
+          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. <span>Bird Nerd also allows users to tag and share their </span> location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
         </article>
         <article class="client-sketches flex is-row space-between">
           <div class="client-sketch-item">
@@ -136,7 +135,7 @@
             <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
-          <h5>(Early sketches provided by team at MPI)</h5> 
+          <h6>(Early sketches provided by team at MPI)</h6> 
       </div>
     </section> <!-- .scope -->
 
@@ -144,13 +143,13 @@
       <div class="wireframes-container flex-container is-column">
 
         <article class="wireframes-text">
-          <h2>Wireframing</h2>
+          <h1>Wireframing</h1>
           <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
         </article>
 
         <div class="pen-paper-wireframes">
           <article>
-          <h3>Pen and paper</h3>
+          <h2>Pen and paper</h2>
           <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
           </article>
           <div>
@@ -160,7 +159,7 @@
 
         <div class="sketch-wireframes flex is-column">
           <article>
-            <h3>Using Sketch app to produce higher fidelity</h3>
+            <h2>Using Sketch app to produce higher fidelity</h2>
             <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
           </article>
           <article class="wireframe-sketches flex is-row space-between">
@@ -186,7 +185,7 @@
     <section class="mockup flex">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
-          <h2>Mockups and designs</h2>
+          <h1>Mockups and designs</h1>
           <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements. Talk about the process of going from a detailed design to a more minimal design.</p>
           <h3>Iteration and experimentation</h3>
           <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations. Talk about the lean agile etc...</p>
@@ -197,7 +196,7 @@
       </div>    
     </section> <!-- .mockup -->
 
-    <section class="final-prototype flex">
+    <section class="final-prototype flex align-center">
       <div class="final-prototype-container flex-container is-column">
         <article>
           <h2>Final Prototype</h2>
