--- a/user-interface.html
+++ b/user-interface.html
@@ -134,13 +134,15 @@
     </section> <!-- .scope -->
 
 
-    <footer class="footer">
-      <div class="social-footer">
-        <p class="copy-right">&copy; Rayfinn Digital</p>
-        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <footer class="footer flex align-center">
+      <div class="main-footer flex-container space-between">
+        <p class="copy-right">&copy; Copyright Rayfinn Digital 2016. Designed and created by Rath Prak</p>
+        <div class="social-icons">
+          <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
       </div>
     </footer>
 
