add content user-interface.html

--- a/prototype.html
+++ b/prototype.html
@@ -104,7 +104,7 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section id="process" class="process align-center flex justify-center">
+    <section class="process align-center flex justify-center">
       <div class="process-container flex-container align-center justify-center">
         <article class="process-text">
           <h1>What's the process?</h1>
