--- a/user-interface.html
+++ b/user-interface.html
@@ -100,22 +100,31 @@
     </div> 
   </section> <!-- .prototype-intro-wrapper -->
 
-
-
-
-
-
-    <section class="tandem-intro flex align-center">
-      <div class="tandem-intro-container flex-container is-row space-between align-center">
-        <article class="tandem-intro-text">
-          <h2>Connecting travellers around New Zealand</h2>
-          <p>For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects in which we can 6 days to complete. Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel. 
-
-          The app was built using Javascript, Node.js and PostgreSQL. My role was to design and front end. I produced wireframes, user-interface and coded most of the CSS. </p>
+  <section class="tandem-intro flex">
+      <div class="tandem-intro-container flex-container align-center justify-center">
+        <article class="intro-text">
+          <h1>Connecting travellers around New Zealand</h1>
+          <p class="intro-para">For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects in which we can 6 days to complete.</p>
+          <p>Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel.</p>
+          <p>The app was built using Javascript, Node.js and PostgreSQL. My role was to design and front end. I produced wireframes, user-interface and coded most of the CSS.</p>
         </article>
       </div>
-    </section> <!-- .process -->
+    </section> <!-- tandem intro -->
 
+    <section class="tadem-process flex">
+      <div class="tadem-process-container flex-container justify-center is-column">
+        <article>
+          <h1>What was our process?</h1>
+          <p>Becuase we only had 6 days to plan, develop and present our finished product it was important that we came up with a system that allowed us to effective manage and plan our product. We decide that an Agile approach to development was the best way to do so. We aslo constantly did 15 minutes stand up.</p>
+          <p>Creating wireframes, user stories and sitemaps from the start was also important because it was made sure that we got the rugby balll rolling. These wireframes were the base for my UI design</p>
+        </article>
+        <div class="tandem-sitemap">
+          <img src="img/tandem-sitemap.png" alt="Image of Tandem wireframe">
+        </div>
+        <h6>(Wireframes done with indesign)</h6> 
+      </div>
+    </section>
+      
     <section class="tandem-final-design flex align-center">
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
