fix fullpage nav on resume.html and UI.html

--- a/user-interface.html
+++ b/user-interface.html
@@ -21,64 +21,64 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-  <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
-  <div class="secondary-nav">
-    <figure class="logo red-logo active-logo">
-      <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
-    </figure>
-    <figure class="logo white-logo">
-      <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
-    </figure>
+    <div class="secondary-nav">
+      <figure class="logo red-logo active-logo">
+        <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+      </figure>
+      <figure class="logo white-logo">
+        <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+      </figure>
 
-    <div class="navbar-toggle">
-      <div class="hamburger-container">
-        <div class="menu-bar"></div>
-        <div class="menu-bar"></div>
-        <div class="menu-bar"></div>
-      </div>
-    </div> <!-- .navbar-toggle / hamburger menu -->
-  </div>  
- 
-    <nav class="fp-nav-wrapper flex is-row justify-start">
-      <div class="menu-container flex is-row">
-        <div class="nav-content is-half">
+      <div class="navbar-toggle">
+        <div class="hamburger-container">
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+        </div>
+      </div> <!-- .navbar-toggle / hamburger menu -->
+    </div>  
+
+    <nav class="fp-nav-wrapper flex">
+      <div class="menu-container flex-container is-column">
+        <div class="nav-menu-content">
           <ul class="menu-list-items">
-            <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
-            <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
-            <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-            <li data-menuanchor="user-interface"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
-            <li data-menuanchor="resume"><a href="resume.html">resume</a></li>
+            <li data-menuanchor="home" class="active"><a href="./#home">home</a></li>
+            <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
+            <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+            <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
+            <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
+            <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
           </ul>
+
+          <div class="social-main-nav">
+            <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          </div>
         </div>
 
-        <aside class="nav-content-text flex is-half justify-center">
-          <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
-        </aside>
+        <div class="nav-about-text">
+          <h2>My name is Rath Prak, <br><span>I'm a Digital designer and front end developer </span> based in Wellington.</h2>
+          <p>My intererests include interaction design, UX/UI, prototyping and front end development.</p>
+        </div>
 
-      <div class="social-main">
-        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-      </div>
-      <div class="nav-back-button">
-        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-      </div>
+        <div class="nav-back-button">
+          <p>menu</p>
+        </div>
 
-      </div>
+      </div> <!-- .menu-container -->
     </nav> <!-- .fp-nav-wrapper -->
-
-  </div> <!-- .main-header & navigation -->
+  </div> <!-- .main-header -->
 
   <main class="ui-main-wrapper align-center justify-center">
 
