experiment with pixi stuff for landing page background

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
   </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
+
     <div class="section main-landing-page">
+    <div class="rendererView"></div>
       <div class="container center-content" >
         <div id="salmon-fish">
           <img src="img/salmon-split.png">
@@ -171,6 +173,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
+  <script src="js/vendor/pixi.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/dist/main.js"></script>
