add screenshot of sketch app design interations

--- a/prototype.html
+++ b/prototype.html
@@ -183,7 +183,7 @@
       </div> 
     </section> <!-- .wireframes -->
 
-    <section class="mockup flex">
+    <section class="mockup flex is-column">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
           <h1>Mockups and designs</h1>
@@ -194,6 +194,9 @@
         <aside class="mockup-screens">
           <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
         </aside>
+      </div>
+      <div class="sketch-screenshot">
+        <img src="img/skechapp-screen.png" alt="screenshot of design interation">
       </div>    
     </section> <!-- .mockup -->
 
