add wireframes user-interface

--- a/user-interface.html
+++ b/user-interface.html
@@ -119,6 +119,10 @@
           <p>Creating wireframes, user stories and sitemaps from the start was also important because it was made sure that we got the rugby balll rolling. These wireframes were the base for my UI design</p>
         </article>
         <div class="tandem-sitemap">
+          <img src="img/tandem-wireframe-test.png" alt="Image of Tandem wireframe">
+        </div>
+        <br>
+        <div class="tandem-sitemap">
           <img src="img/tandem-sitemap.png" alt="Image of Tandem wireframe">
         </div>
         <h6>(Wireframes done with indesign)</h6> 
