rework footer layout

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
   </nav> <!-- .fp-nav-wrapper -->
 
   <div class="location-caption">
-    <p>Wellington, New Zealand</p>
+    <p><span>digital designer</span> and <span>front end developer</p>
   </div>
   <div class="social-main">
     <ul>
-      <li class="social-title"><span>digital designer</span> and <span>front end developer</span></li>
+<!--       <li class="social-title"><span>digital designer</span> and <span>front end developer</span></li> -->
       <li><a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
       <li><a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       <li><a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
