pulling from master

--- a/index.html
+++ b/index.html
@@ -82,12 +82,18 @@
     </div> <!-- .menu-container -->
   </nav> <!-- .fp-nav-wrapper -->
 
-    <div class="social-main">
-      <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-    </div>
+  <div class="location-caption">
+    <p><span>digital designer</span> and <span>front end developer</p>
+  </div>
+  <div class="social-main">
+    <ul>
+<!--       <li class="social-title"><span>digital designer</span> and <span>front end developer</span></li> -->
+      <li><a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+      <li><a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+      <li><a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      <li><a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+    </ul>
+  </div>
 
   </div> <!-- .main-header & navigation -->
 
