--- a/prototype.html
+++ b/prototype.html
@@ -91,9 +91,9 @@
       <div class="prototype-case-study flex-container is-column-reverse space-between">
         <article class="intro-text flex is-column justify-center">
           <h1>Bird Nerd</h1>
-          <h2>Case study and personal project, UX/Prototyping</h2>
+          <h2>Personal project / prototyping</h2>
           <p class="prototype-body-text">
-            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small..
+            Bird Nerd is an app that helps users record bird song or calls, automatically identify bird song or calls and upload sightings to a database. <!-- It provides a dynamic learning experience for recognising New Zealand bird songs that will help increase knowledge and awareness of bird conservation in New Zealand. -->
           </p>
         </article>  
         <div class="welcome-iphone">
@@ -105,22 +105,29 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process align-center flex justify-center">
-      <div class="process-container flex-container align-center justify-center">
-        <article class="process-text">
-          <h1>What's the process?</h1>
-          <p class="intro-para">We expect everyone to participate, be committed and work hard. In return, we will open up our network to you and actively support you for 12 months.</p>
-          <p>You will get access to workshops, network, investors, advise, data science labs (AI/IoT etc), workshops, social events and – of course – office and meeting room facilities.</p>
-          <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome.</p>
+    <section class="introduction align-center flex justify-center">
+      <div class="introduction-container flex-container align-center justify-center">
+        <article class="introduction-text">
+          <h1>Introduction</h1>
+          <p class="intro-para">Bird Nerd provides a dynamic learning experience for recognising New Zealand bird songs that aims to increase knowledge and awareness of bird conservation in New Zealand.</p>
+
+          <p>In 2014 a friend who worked at the Ministry Of Primary industries approached me to help him come up with visual designs for an app idea he and his colleagues were pitching as part of the <a a target="_blank" href="http://www.aspiringleaders.org.nz">Aspiring Leadership Programme</a>, an annual event that brings together a diverse group of committed and courageous young leaders from across Aotearoa New Zealand.</p>
+
+          <p>Our initial plan was to produce a series of simple wireframes that his team could present, we later felt that wireframes alone were not enough to communicate what his team wanted to build. We decided develop a <span>high fidelity prototype</span> based on a selected user story which included UI components and interactivity. </p>
         </article>
       </div>
     </section> <!-- .process -->
 
-    <section class="scope flex justify-center">
-      <div class="scope-container flex-container is-column">
-        <article class="scope-text">
-          <h1>Scoping</h1>
-          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. <span>Bird Nerd also allows users to tag and share their </span> location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+    <section class="background flex justify-center">
+      <div class="background-container flex-container is-column">
+        <article class="background-text">
+          <h1>Background</h1>
+          <p class="intro-para">New Zealand has around 68 species of endemic birds, most of which have distinct songs and calls. However, recognising even a few birds from calls is difficult for most people.</p>
+
+          <p>Bird Nerd allows users to record bird songs and calls and identify which bird made the sound through ‘cloud’ based computations. Each time the app is used to identify a bird, data would be collected. This data will be publicly available through a website enabling individuals, communities, school groups, conservation groups, scientists and government agencies to help aid the conservation effort.</p>
+
+          <p>The primary objectives of Bird Nerd is to <span>enable New Zealanders to easily identify NZ bird song/calls,</span> foster greater connection with the natural environment through education and engagement and Use innovative technologies to facilitate connection to the outdoors.</p>
+
         </article>
         <article class="client-sketches flex is-row space-between">
           <div class="client-sketch-item">
@@ -136,7 +143,7 @@
             <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
-          <h6>(Early sketches provided by team at MPI)</h6> 
+          <h5>(Early sketches and ideas provided by team at MPI)</h5> 
       </div>
     </section> <!-- .scope -->
 
@@ -145,23 +152,18 @@
 
         <article class="wireframes-text">
           <h1>Wireframing</h1>
-          <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
+
+          <p class="intro-para">For this case study I decided focus on developing one user story – registration and login. Add something about time restrictions</p>
+
+          <p>Wireframing was essential to making sure the prototype started in the right direction. Base on the content provided by MPI, I created sketches using pen and paper. This was fast and easy and gave me good idea of what functionality and content was required.</p>
+          <img src="img/wireframe-sketches.jpg" alt="fill this out">
+          <h5>(Wireframes produced with pen and paper, I spent approximately an hour on these simple sketches)</h5>
         </article>
-
-        <div class="pen-paper-wireframes">
-          <article>
-          <h2>Pen and paper</h2>
-          <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
-          </article>
-          <div>
-            <img src="img/wireframe-sketches.jpg" alt="fill this out">
-          </div>
-        </div>
-
+        
         <div class="sketch-wireframes flex is-column">
           <article>
-            <h2>Using Sketch app to produce higher fidelity</h2>
-            <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
+            <h2>Using Sketch App to produce higher fidelity</h2>
+            <p>I then converted the sketches into <span>digital wireframes using Sketch App.</span> Using Sketch UI kits, I was able to quickly produce vector based wireframe which I could then easily share and receive feedback. These also acted as a Lo-fi prototypes.</p>
           </article>
           <article class="wireframe-sketches flex is-row space-between">
             <div>
@@ -177,24 +179,23 @@
              <img src="img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
-          <h6>(Wireframes done with sketch app)</h6> 
+          <h5>(Wireframes produced with Sketch App and UI kits)</h5> 
         </div>
 
       </div> 
     </section> <!-- .wireframes -->
 
-    <section class="mockup flex">
+    <section class="mockup flex is-column">
       <div class="mockup-container flex-container align-center space-between is-column">
         <article class="mockup-text">
-          <h1>Mockups and designs</h1>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements. Talk about the process of going from a detailed design to a more minimal design.</p>
-          <h3>Iteration and experimentation</h3>
-          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations. Talk about the lean agile etc...</p>
+          <h1>Hi-fi- Mockups and design</h1>
+          <p>Using a combination of sketch app and photoshop, the wireframes were then transformed into high-fidelity mockups with color, typography and other visual elements. Utilising Sketch’s artboard feature, I rapidly <span>iterated and experimented </span> with different visual design variations.</p>
         </article>
-        <aside class="mockup-screens">
-          <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
-        </aside>
-      </div>    
+        <div class="sketch-screenshot">
+          <img src="img/skechapp-screen.png" alt="screenshot of design interation">
+        </div>
+        <h5>(Early sketches and ideas provided by team at MPI)</h5> 
+      </div>
     </section> <!-- .mockup -->
 
     <section class="final-prototype flex align-center">
