text to landing page and change trasiton of preloader

--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
   <main role="main" id="fullpage">
 
     <div class="section main-landing-page">
-    <div class="rendererView"></div>
-      <div class="container center-content" >
+      <div class="rendererView"></div>
+      <div class="container center-content">
+        <div class="landing-header">
+          <h1>Big, tailor-made ideas.</h1>
+          <h3>Kingsize — Creative Agency.</h3>
+        </div>
         <div id="salmon-fish">
           <img src="img/salmon-split.png">
           <img id="salmon-fin" src="img/finn.png">
