--- a/prototype.html
+++ b/prototype.html
@@ -90,8 +90,8 @@
       </div>
       <div class="prototype-case-study flex-container is-column-reverse space-between">
         <article class="intro-text flex is-column justify-center">
-          <h1>Bird Nerd</h1>
-          <h2>Personal project / prototyping</h2>
+          <h1>Prototyping</h1>
+          <h2>Personal project / Bird Nerd</h2>
           <p class="prototype-body-text">
             Bird Nerd is an app that helps users record bird song or calls, automatically identify bird song or calls and upload sightings to a database. <!-- It provides a dynamic learning experience for recognising New Zealand bird songs that will help increase knowledge and awareness of bird conservation in New Zealand. -->
           </p>
@@ -143,7 +143,7 @@
             <img src="img/assets/bird-nerd-4.jpg" alt="Bird Nerd client sketches">
           </div>
         </article>
-          <h5>(Early sketches and ideas provided by team at MPI)</h5> 
+          <h5>(Early sketches provided by team at MPI)</h5> 
       </div>
     </section> <!-- .scope -->
 
@@ -201,8 +201,8 @@
     <section class="final-prototype flex align-center">
       <div class="final-prototype-container flex-container is-column">
         <article>
-          <h1>Final Prototype</h1>
-          <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
+          <h1>Introducing Bird Nerd</h1>
+          <p>The main landing page has been designed to allow users quick access to primary functions of the application. The interface design aims to be minimal and uncluttered without any unnecessary elements. I opted to not use any images or photography and instead went for a minimal approach using only one color, red which gives greater contrast against the green and earthy colors of the outdoors where the app would primarily be used.</p>
         </article>
         <article class="final-prototype-screens flex space-between">
           <div>
@@ -224,10 +224,9 @@
     <section class="framer flex">
       <div class="framer-container flex-container align-center space-between is-column-reverse">
         <article class="framer-text col-two-thirds">
-          <h2>Interactive prototypes with Framer</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-          <h3>Iteration and experimentation</h3>
-          <p>Talk about your decisions for using famer and what were the advantages. Also talk about other tools like proto, invision and UXpin</p>
+          <h1>Experimenting with Interactive prototyping tools</h1>
+          <h2>“Keeping up with trends in technology improves product design and how we prototype them”</h2>
+          <p>To better communicate the app’s interactions and transitions to stakeholders, I experimented with different prototyping tools such as Proto, Atomic and Framer.  I found Framer very powerful because framer uses javascript (Coffeescript) it was very powerful and I was able to produce very hi-fi prototypes.</p>
           <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
         <aside class="framer-iphone">
