--- a/user-interface.html
+++ b/user-interface.html
@@ -88,11 +88,11 @@
     </div>
     <div class="ui-case-study flex-container is-column-reverse space-between">
       <article class="intro-text flex is-column justify-center">
-      <h1>Tandem</h1>
-      <h2>Case study and Group project, UX/Prototyping</h2>
-      <p class="ui-body-text">
-      Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small..
-      </p>
+        <h1>Tandem</h1>
+        <h2>Group project, user interface and front end development</h2>
+        <p class="ui-body-text">
+        Tadem is a ridesharing app connects drivers and passengers willing to travel together between cities and share the cost of the journey.
+        </p>
       </article>  
       <div class="welcome-iphone">
        <img src="img/tandem-iphone.png" alt="welcome page of Bird Nerd app">
@@ -101,27 +101,39 @@
   </section> <!-- .prototype-intro-wrapper -->
 
   <section class="tandem-intro flex">
-      <div class="tandem-intro-container flex-container align-center justify-center">
+      <div class="tandem-intro-container flex-container align-center justify-center is-column">
         <article class="intro-text">
-          <h1>Connecting travellers around New Zealand</h1>
-          <p class="intro-para">For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects in which we can 6 days to complete.</p>
-          <p>Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel.</p>
-          <p>The app was built using Javascript, Node.js and PostgreSQL. My role was to design and front end. I produced wireframes, user-interface and coded most of the CSS.</p>
+          <h1>Introduction</h1>
+          <p class="intro-para">For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects, each team had six days to complete the project.</p>
+          <p>Our team consisted of 6 members and the chosen idea was Tandem. Tandem is a ridesharing app that connects drivers and passengers willing to travel together and share the costs of travel. Its aimed at drivers travelling long distances looking to fill empty seats and reducing the costs of travel.</p>
+
+          <p>Every team member was involved with product development and planning. <span>My Role was to design the user interface and front end development. Based on the produced wireframes I implemented the visual elements and layouts.</span></p>
         </article>
       </div>
     </section> <!-- tandem intro -->
 
+    <section class="tadem-technology flex">
+      <div class="tadem-technology-container flex-container justify-center is-column">
+        <article>
+          <h1>Technology</h1>
+          <p>Tandem used a lot of different technologies. We used <span>Express</span> to run a server and <span>Knex</span> to assist with our SQL calls to our <span>PostgreSQL</span> database. We used handlebars for html templating and <span>SASS, Jquery</span> for DOM manipulation and <span>nightwatch</span>, <span>selenium</span> for testing and <span>OAuth</span> for authorisation.</p>
+        </article>
+      </div>
+    </section>
+
     <section class="tadem-process flex">
       <div class="tadem-process-container flex-container justify-center is-column">
         <article>
-          <h1>What was our process?</h1>
-          <p>Becuase we only had 6 days to plan, develop and present our finished product it was important that we came up with a system that allowed us to effective manage and plan our product. We decide that an Agile approach to development was the best way to do so. We aslo constantly did 15 minutes stand up.</p>
-          <p>Creating wireframes, user stories and sitemaps from the start was also important because it was made sure that we got the rugby balll rolling. These wireframes were the base for my UI design</p>
+          <h1>Our approach and process</h1>
+          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved on to building wireframes for the site. Creating wireframes, user stories and sitemaps from the start was important because it made sure that we got the rugby balll rolling and that everyone in the team was on the same page. These wireframes and site maps were the base for my UI design 
+          </p>
+          <p>
+          As we only had a week to complete the task, we skipped the prototype stage and moved straight into development.</p>
         </article>
-        <div class="tandem-sitemap">
+<!--         <div class="tandem-sitemap">
           <img src="img/tandem-wireframe-test.png" alt="Image of Tandem wireframe">
         </div>
-        <br>
+        <br> -->
         <div class="tandem-sitemap">
           <img src="img/tandem-sitemap.png" alt="Image of Tandem wireframe">
         </div>
@@ -132,15 +144,17 @@
     <section class="tandem-final-design flex align-center">
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
-          <h2>Final design</h2>
-          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their.</p>
+          <h1>Welcome to Tandem</h1>
+          <p>After 6 days of intense development and design we had archieved our MVP and felt we had an app that we could proudly present. There were still many areas that needed improvement but during the experience  design we had archieved our MVP and felt we had an app that we could proudly present.  There were still many areas that needed improvement but during the experience.</p>
         </article>
         <article>
           <div class="tandem-screen-img">
             <img src="img/tandem-landing.png" alt="screen shot of tandem landing page">
+            <h6>(Tandem landing page)</h6> 
           </div>
           <div class="tandem-screen-img">
             <img src="img/tandem-sign-in.png" alt="screen shot of tandem landing page">
+            <h6>(Tandem sign-in page)</h6> 
           </div>
         </article> 
       </div>
