fix links in header, add content to about section

--- a/prototype.html
+++ b/prototype.html
@@ -57,7 +57,7 @@
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
-            <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
+            <li data-menuanchor="contact" class="menu-item"><a href="./#contact">contact</a></li>
           </ul>
 
           <div class="social-main-nav">
