--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
           <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
-          <li data-menuanchor="user-interface" class="menu-item"><a href="#user-interface">user interface</a></li>
+          <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
           <li data-menuanchor="photography" class="menu-item"><a href="#photography">design</a></li>
-          <li data-menuanchor="resume" class="menu-item"><a href="resume.html">resume</a></li>
+          <li data-menuanchor="contact" class="menu-item"><a href="#contact">contact</a></li>
         </ul>
 
         <div class="social-main-nav">
@@ -128,15 +128,11 @@
 
     <div class="section about-me flex justify-center">
        <div class="wrapper-container flex is-column justify-center">
-<!--     <ul class="skills space-between">
-          <li class="skill-item">design</li>
-          <li class="skill-item">prototyping</li>
-          <li class="skill-item">UX/UI</li>
-          <li class="skills-item">Interactive</li>
-        </ul> --> 
-        <div class="about-footer-text">
-          <h2>click above to view my portfolio</h2>
-        </div>
+          <div class="about">
+            <h1 class="fadetext-about">Interested in collaborating?</h1>
+            <h2 class="fadetext-about">“Keeping up with trends in technology improves product design and how we prototype them”</h2>
+            <p class="fadetext-about">Like the design you see, but not seeing the pages or features you need for your site in our example? No problem, you can add any of Squarespace's core features to any of our templates.</p>
+          </div>
       </div>     
       </div>
     </div> <!-- .section .about-me  -->  
@@ -175,6 +171,12 @@
     <div class="section photography">
       <div class="center-content">
         <h1>photography content and design</h1>
+      </div>
+    </div>
+
+    <div class="section contact">
+      <div class="center-content">
+        <h1>This is where the contact section will go</h1>
       </div>
     </div>  
 
