add full page image to prototype.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </nav> <!-- .fp-nav-wrapper -->
 
   <div class="location-caption">
-    <p><span>digital designer</span> and <span>front end developer</p>
+    <p class="title-caption"><span>digital designer</span> and <span>front end developer</p>
   </div>
   <div class="social-main">
     <ul>
