--- a/prototype.html
+++ b/prototype.html
@@ -198,7 +198,7 @@
       </div>
     </section> <!-- .mockup -->
 
-    <section class="final-prototype flex align-center">
+    <section class="final-prototype flex align-center is-column">
       <div class="final-prototype-container flex-container is-column">
         <article>
           <h1>Introducing Bird Nerd</h1>
@@ -218,6 +218,9 @@
           <img src="img/signup-iphone.png" alt="fill this out">
           </div>
         </article>
+      </div>
+      <div class="bird-nerd-welcome">
+        <img src="img/welcome-bird.jpg" alt="">
       </div>
     </section> <!-- .final prototype -->
 
