--- a/index.html
+++ b/index.html
@@ -133,7 +133,20 @@
             <h2 class="fadetext-about">“Keeping up with trends in technology improves product design and how we prototype them”</h2>
             <p class="fadetext-about">Like the design you see, but not seeing the pages or features you need for your site in our example? No problem, you can add any of Squarespace's core features to any of our templates.</p>
           </div>
-      </div>     
+        </div>
+
+        <div class="pulse">
+        <a href="#prototype">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
+      </div>
+
       </div>
     </div> <!-- .section .about-me  -->  
 
